<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Текст, когда список пуст -->
    <TextView
        android:id="@+id/textJournalEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/journal_list_empty"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Линейный слой для состояния "Журнал готов" -->
    <LinearLayout
        android:id="@+id/layoutJournalReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textJournalEmpty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/journalReadyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_ready"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- ProgressBar для загрузки -->
    <ProgressBar
        android:id="@+id/progressDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textJournalEmpty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ввод ID журнала -->
    <EditText
        android:id="@+id/inputJournalId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_journal_id"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/layoutJournalReady"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Кнопки для действий -->
    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/download"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/inputJournalId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonView" />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/view"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/inputJournalId"
        app:layout_constraintStart_toEndOf="@id/buttonDownload"
        app:layout_constraintEnd_toStartOf="@id/buttonDelete" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/delete"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/inputJournalId"
        app:layout_constraintStart_toEndOf="@id/buttonView"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Список журналов -->
    <ListView
        android:id="@+id/listViewJournals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:divider="@color/black"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@id/buttonDownload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Кнопка информации об авторе -->
    <Button
        android:id="@+id/authorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:text="@string/author_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>